--- a/place.html
+++ b/place.html
@@ -13,23 +13,53 @@
         <a href="./index.html" class="logo">
             <img src="./logo.png" alt="Index Logo">
         </a>
-            <a href="login.html" id="login-link">Logiyn</a>
+            <a href="login.html" id="login-link">Login</a>
         </nav>
     </header>
     <main>
         <section id="place-details">
             <!-- Place details will be populated dynamically -->
+             <div>
+                <h3>Beautiful Beach House</h3>
+             </div>
+             <div class="place-info">
+                <p><b>Host:</b> John Doe</p>
+                <p><b>Price per night:</b> $150</p>
+                <p><b>Location:</b> Los Angeles, United States</p>
+                <p><b>Description:</b> A beautiful beach house with amazing views...</p>
+                <p><b>Amenities:</b> WiFi, Pool, Air Conditioning</p>
+             </div>
         </section>
         <section id="reviews">
+            <h2>Reviews</h2>
+            <div class="review-card">
+                <p><b>Jane Smith:</b></p>
+                <p>Great Plac to stay!</p>
+                <p>Rating: ★★★★☆</p>
+            </div>
+            <div class="review-card">
+                <p><b>Robert Brown:</b></p>
+                <p>Amazing location and very comfortable.</p>
+                <p>Rating: ★★★★★</p>
+            </div>
             <!-- Reviews will be populated dynamically -->
         </section>
         <section id="add-review">
             <h2>Add a Review</h2>
             <form id="review-form">
-                <label for="review-text">Review:</label>
+                <label for="review-text">Your Review:</label>
                 <textarea id="review-text" name="review-text" required></textarea>
-                
-                <button type="submit">Submit</button>
+                <div>
+                    <label for="rating-stars">Rating:</label>
+                    <select id="rating-stars">
+                        <option value="star5">★★★★★</option>
+                        <option value="star4">★★★★</option>
+                        <option value="star3">★★★</option>
+                        <option value="star2">★★</option>
+                        <option value="star1">★</option>
+                    </select>
+                </div>
+                <button type="submit">Submit Review</button>
             </form>
         </section>
     </main>
